# omp-cross-platform

./: CMakeLists.txt  README.md  main.cpp
